--- a/ls03_github-api-json.Rmd
+++ b/ls03_github-api-json.Rmd
@@ -142,7 +142,7 @@ users %>%
 
 `map()` always returns a list, even if all the elements have the same flavor and are of length one. But in that case, you might prefer a simpler object: **an atomic vector**.
 
-If you expect `map()` to return output that can be turned into an atomic vector, it is best to use a type-specific variant of `map()`. This is more efficient than using `map()` to get a list and then simplifying the result in a second step. Also purrr will also alert you to any problems, i.e. if one or more inputs has the wrong type or length. This is the [increased rigor about type alluded to in the section about coercion](bk00_vectors-and-lists.html#coercion).
+If you expect `map()` to return output that can be turned into an atomic vector, it is best to use a type-specific variant of `map()`. This is more efficient than using `map()` to get a list and then simplifying the result in a second step. Also purrr will alert you to any problems, i.e. if one or more inputs has the wrong type or length. This is the [increased rigor about type alluded to in the section about coercion](bk00_vectors-and-lists.html#coercion).
 
 Our current examples are suitable for demonstrating `map_chr()`, since the requested elements are always character.
 
@@ -197,9 +197,9 @@ str(x[3:4])
 
 ### Data frame output
 
-We just learned how to extract multiple elements per user by mapping `[`. But, of course, `map()` returns list. Even if all the elements are character, we can't use `map_chr()`, because the user-level info has length greater than one.
+We just learned how to extract multiple elements per user by mapping `[`. But, since `[` is non-simplifying, each user's elements are returned in a list. And, as it must, `map()` itself returns list. We've traded one recursive list for another recursive list, albeit a slightly less complicated one.
 
-How can we "stack up" these results row-wise, i.e. one row per user and variables for "login", "name", etc.?
+How can we "stack up" these results row-wise, i.e. one row per user and variables for "login", "name", etc.? A data frame would be the perfect data structure for this information.
 
 This is what `map_df()` is for.
 
@@ -224,7 +224,7 @@ users %>% {
 
 #### Exercises
 
-1. Use `map_df()` to create a data frame with one row per user and variables for "name", "following", and "created_at".
+1. Use `map_df()` to create a data frame with one row per user and variables for "name", "following", and "created_at". What type are the variables?
 
 ### Repositiories for each user
 
@@ -238,16 +238,15 @@ repos %>%
   writeLines("github_repos.json")
 ```
 
-The list above has one level of nesting, but it's common to have even more.
+The `users` list from above has one primary level of nesting, but it's common to have even more.
 
-`repos` is a list with:
+Meet `repos`. It is a list with:
 
-  * one element per GitHub user
-  * each element is another list of that user's repositories (actually, just the first 30)
-  * several of those list elements are, again, a list
+  * one component for each of our 6 GitHub users
+  * each component is another list of that user's repositories (or just the first 30, if user has more than 30)
+  * several of those list components are, again, a list
 
-Download this:  
-<https://github.com/jennybc/purrr-tutorial/raw/gh-pages/github_repos.json>. Use the code below to grab the JSON from GitHub (*this will soon be available within  [repurrrsive](https://github.com/jennybc/repurrrsive#readme)*).
+This information is stored in a JSON file: [github_repos.json](https://github.com/jennybc/purrr-tutorial/raw/gh-pages/github_repos.json). Create this file locally or uncomment the code below to read it directly from GitHub (*this will soon be available within  [repurrrsive](https://github.com/jennybc/repurrrsive#readme)*). `fromJSON()` from jsonlite reads this information directly into an R list.
 
 ```{r}
 ## grab the JSON from GitHub
@@ -259,15 +258,25 @@ repos <- fromJSON(json_source, simplifyDataFrame = FALSE)
 str(repos, max.level = 1)
 ```
 
+As usual, we have no idea what's in here and, again, this is normal. To work with lists, you have to develop list inspection strategies.
+
 Explore it interactively:
 
 ```{r echo = FALSE}
 jsonedit(repos, mode = "view")
 ```
 
-### Revisit shortcuts to extract elements by name or position
+#### Exercises
 
-Now we can use the indexing shortcuts in a more complicated setting. Instead of providing a single name or position, we use a vector:
+Use `str()`, `[`, and `[[` to explore this list, possibly in addition to the interactive list viewer.
+
+1. How many elements does `repos` have? How many elements does each of those elements have?
+2. Extract a list with all the info for one repo for one user. Use `str()` on it. Maybe print the whole thing to screen. How many elements does this list have and what are their names? Do the same for at least one other repo from a different user and get an rough sense for whether these repo-specific lists tend to look similar.
+3. What are three pieces of repo information that strike you as the most useful? I.e. if you were going to make a data frame of repositories, what might the variables be?
+
+### Vector input to extraction shortcuts
+
+Now we use the indexing shortcuts in a more complicated setting. Instead of providing a single name or position, we use a vector:
 
   * the `j`-th element addresses the `j`-th level of the hierarchy
   
@@ -276,16 +285,26 @@ It's easiest to see in a concrete example. We get the full name (element 3) of t
 ```{r}
 repos %>%
   map_chr(c(1, 3))
-## TO DO: I would really prefer a character example :(
+## TO DO? I would prefer a character example :( but repos is unnamed atm
 ```
 
-### Organizing an analysis in a data frame
+Note that this does NOT give elements 1 and 3 of `repos`. It extracts the first repo for each user and, within that, the 3rd piece of information for the repo.
 
-*under development*
+#### Exercises
 
-Mission: get a data frame with one row per repository, with varibles identifying which GitHub user owns it and the repository name, etc.
+1. Each repository carries information about its owner in a list. Use `map_chr()` and the position indexing shortcut with vector input to get an atomic character vector of the 6 GitHub usernames for our 6 users: "gaborcsardi", "jennybc", etc. You will need to use your list inspection skills to figure out where this info lives.
 
-Step 1: Put the repository list into a data frame, along with identifying GitHub usernames.
+### List inside a data frame
+
+We go out in a blaze of glory now, using all of the techniques from above plus a couple news ones.
+
+*NOTE TO SELF: this still goes from zero to sixty too fast.*
+
+**Mission: get a data frame with one row per repository, with variables identifying which GitHub user owns it, the repository name, etc.**
+
+Step 1: Put the `repos` list into a data frame, along with identifying GitHub usernames. The care and feeding of lists inside a data frame -- "list-columns" -- is the subject of its own lesson (*yet to be written / linked*), so I ask you to simply accept that this can be done.
+
+We use the answer to the previous exercise to grab the 6 usernames and set them as the names on the `repos` list. Then we use `tibble::enframe()` to convert this named vector into a tibble with the names as one variable and the vector as the other. This is a generally useful setup technique.
 
 ```{r}
 (unames <- map_chr(repos, c(1, 4, 1)))
@@ -294,24 +313,65 @@ Step 1: Put the repository list into a data frame, along with identifying GitHub
     enframe("username", "gh_repos"))
 ```
 
-*go out in blaze of glory ... or rather: develop this in steps*
+Build confidence by doing something modest on the list-column of repos. This is your introduction to another powerful, general technique: `map()` inside `mutate()`. Note we are now bringing the data frame wrangling tools from dplyr and tidyr to bear.
 
 ```{r}
-rdf <- udf %>% 
-  mutate(
-    #n_repos = map_int(gh_repos, length),
-    repo_info = gh_repos %>%
-      map(. %>% map_df(`[`, c("name", "fork", "open_issues")))
-  ) %>% 
-  select(-gh_repos) %>% 
-  tidyr::unnest()
+udf %>% 
+  mutate(n_repos = map_int(gh_repos, length))
+```
+
+This shows that we know how to operate on a list-column inside a tibble.
+
+Figure out how to do what we want for a single user, i.e. for a single element of `udf$gh_repos`. Walk before you run.
+
+How far to we need to drill to get a single repo? How do we create "one row's worth" of data for this repo? How do we do that for all repos for a single user?
+
+```{r}
+## one_user is a list of repos for one user
+one_user <- udf$gh_repos[[1]]
+## one_user[[1]] is a list of info for one repo
+one_repo <- one_user[[1]]
+str(one_repo, max.level = 1, list.len = 5)
+## a highly selective list of tibble-worthy info for one repo
+one_repo[c("name", "fork", "open_issues")]
+## make a data frame of that info for all a user's repos
+map_df(one_user, `[`, c("name", "fork", "open_issues"))
+## YYAAAASSSSSSS
+```
+
+Now we scale this up to all of our users. Yes, we use mutate to `map()` inside a `map()`.
+
+```{r}
+udf %>% 
+  mutate(repo_info = gh_repos %>%
+           map(. %>% map_df(`[`, c("name", "fork", "open_issues"))))
+```
+
+The user-specific tibbles about each user's repos are now sitting in the `repo_info`. How do we simplify this to a normal data frame that is free of list-columns? Remove the `gh_repos` variable, which has served its purpose and use `tidyr::unnest()`.
+
+```{r}
+(rdf <- udf %>% 
+   mutate(
+     repo_info = gh_repos %>%
+       map(. %>% map_df(`[`, c("name", "fork", "open_issues")))
+   ) %>% 
+   select(-gh_repos) %>% 
+   tidyr::unnest())
+```
+
+Let's do a little manipulation with dplyr to find some of the more interesting repos and get repos from each user in front of our eyeballs. I get rid of forks and show the 3 repos for each user that have the most open issues. (Remember we are only working with the first 30 repos for each user -- I had to remember my open issue situation is much more grim than this table suggests.)
+
+```{r}
 rdf %>% 
   filter(!fork) %>% 
   select(-fork) %>% 
   group_by(username) %>%
   arrange(username, desc(open_issues)) %>%
-  top_n(3)
+  top_n(3) %>% 
+  print(n = Inf)
+## TO DO: do this another way that is better about ties
 ```
+
 
 ### Appendix
 
